@@ -54,5 +54,6 @@ source "$APPSDIR/examples/usbstorage/Kconfig"
 source "$APPSDIR/examples/usbterm/Kconfig"
 source "$APPSDIR/examples/watchdog/Kconfig"
 source "$APPSDIR/examples/wget/Kconfig"
+source "$APPSDIR/examples/wgetjson/Kconfig"
 source "$APPSDIR/examples/wlan/Kconfig"
 source "$APPSDIR/examples/xmlrpc/Kconfig"
