@@ -1382,7 +1382,7 @@ void cJSON_ReplaceItemInObject(cJSON *object, const char *string, cJSON *newitem
 
 /* Create basic types: */
 
-cJSON *cJSON_CreateNull()
+cJSON *cJSON_CreateNull(void)
 {
   cJSON *item = cJSON_New_Item();
   if (item)
@@ -1393,7 +1393,7 @@ cJSON *cJSON_CreateNull()
   return item;
 }
 
-cJSON *cJSON_CreateTrue()
+cJSON *cJSON_CreateTrue(void)
 {
   cJSON *item = cJSON_New_Item();
   if (item)
@@ -1404,7 +1404,7 @@ cJSON *cJSON_CreateTrue()
   return item;
 }
 
-cJSON *cJSON_CreateFalse()
+cJSON *cJSON_CreateFalse(void)
 {
   cJSON *item = cJSON_New_Item();
   if (item)
@@ -1451,7 +1451,7 @@ cJSON *cJSON_CreateString(const char *string)
   return item;
 }
 
-cJSON *cJSON_CreateArray()
+cJSON *cJSON_CreateArray(void)
 {
   cJSON *item = cJSON_New_Item();
   if (item)
@@ -1462,7 +1462,7 @@ cJSON *cJSON_CreateArray()
   return item;
 }
 
-cJSON *cJSON_CreateObject()
+cJSON *cJSON_CreateObject(void)
 {
   cJSON *item = cJSON_New_Item();
   if (item)
